agentforce/force-app/main/default/objects/Agent_Audit_Log__c/Agent_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>One row per agent action: who, what, which data source, latency, guardrails and feedback.</description>
    <label>Agent Audit Log</label>
    <nameField><displayFormat>AAL-{000000}</displayFormat><label>Log</label><type>AutoNumber</type></nameField>
    <pluralLabel>Agent Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>