agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agent Audit Logs</relationshipLabel>
    <relationshipName>Agent_Audit_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>