agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>