agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Salesforce, Snowflake SQL API, Cortex Search, Cortex Agent or cache.</description>
    <label>Data Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>