agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Helpful</fullName><default>false</default><label>Helpful</label></value><value><fullName>Not Helpful</fullName><default>false</default><label>Not Helpful</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>