agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Feedback_Comment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comment__c</fullName>
    <label>Feedback Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>