agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Guardrail__c.field-meta.xml
<CustomField>
    <fullName>Guardrail__c</fullName>
    <description>Guardrail that fired, if any.</description>
    <label>Guardrail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>