agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Inputs__c.field-meta.xml
<CustomField>
    <fullName>Inputs__c</fullName>
    <label>Inputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>