agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <label>Latency (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>