agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Output_Summary__c.field-meta.xml
<CustomField>
    <fullName>Output_Summary__c</fullName>
    <label>Output Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>