agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Snowflake_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Snowflake_Query_Id__c</fullName>
    <description>Look this up in Snowflake query history.</description>
    <label>Snowflake Query Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>