agentforce/force-app/main/default/objects/Agent_Audit_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Success</fullName><default>true</default><label>Success</label></value><value><fullName>Fallback</fullName><default>false</default><label>Fallback</label></value><value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value><value><fullName>Error</fullName><default>false</default><label>Error</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>