agentforce/force-app/main/default/objects/Agent_Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agent__c</columns>
    <columns>Action__c</columns>
    <columns>Account__c</columns>
    <columns>Data_Source__c</columns>
    <columns>Status__c</columns>
    <columns>Latency_Ms__c</columns>
    <columns>Guardrail__c</columns>
    <columns>Feedback__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>