agentforce/force-app/main/default/objects/Agent_Audit_Log__c/listViews/Guardrails_and_Fallbacks.listView-meta.xml
<ListView>
    <fullName>Guardrails_and_Fallbacks</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agent__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <columns>Guardrail__c</columns>
    <columns>Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters><field>Status__c</field><operation>notEqual</operation><value>Success</value></filters>
    <label>Guardrails and Fallbacks</label>
</ListView>